# ProtoBot

./: .gitignore  CMakeLists.txt  README.md  a.ps1  build_and_run.cmd  build_and_run.sh  init.ps1  package.json  start.js  start.ps1
random stuff that prob shouldnt be here/: a.cpp  a.py
src/: deploy-commands.js  main.js
src/bot/: main.cpp
src/builder/: build.py
src/commands/: 8-ball.js  ban.js  hi.js  info.js  kill.js  owoify.js  refresh.js  restart.js  rng.js  timeout.js  together.js
src/events/: interactionCreate.js  messageCreate.js  ready.js
src/fun gi/: imbored.cpp  timer.h
src/helpers/: check-os.js  get-rng.js  process.js  sleep.js  time.js
src/testing/: that_one_test.cpp
